# Taurium

./: AGENTS.md  LICENSE  PLAN.md  README.md  package-lock.json  package.json  services.json  vite.config.js
.github/workflows/: ci.yml  release.yml
docs/: auto-update.md
src/: design.html  icons.js  index.html  main.js  settings.css  settings.html  settings.js  snow.css  style.css  toast.css  toast.js  updater.js
src-tauri/: Cargo.toml  recipes.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cert_trust.rs  config.rs  error.rs  lib.rs  main.rs  recipes.rs  webviews.rs
