[package]
name = "taurium"
version = "0.5.1"
description = "A minimalist Ferdium-like app with multi-webview support"
authors = ["Emilien Etadam <emilien@etadam.com>"]
edition = "2021"

[lib]
name = "taurium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` volontairement absent : les DevTools restent activés en debug
# (comportement Tauri par défaut) mais désactivés dans les builds release.
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
regex-lite = "0.1"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"
