[package]
name = "taurium"
version = "0.5.5"
description = "A minimalist Ferdium-like app with multi-webview support"
authors = ["Emilien Etadam <emilien@etadam.com>"]
edition = "2021"

[lib]
name = "taurium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` volontairement absent : les DevTools restent activés en debug
# (comportement Tauri par défaut) mais désactivés dans les builds release.
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
regex-lite = "0.1"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
sha2 = "0.10"

# MemoryUsageTargetLevel hint for hidden webviews. Versions must stay in sync
# with what wry uses, so the COM interface types match.
[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"

[dev-dependencies]
tempfile = "3"
